syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.qlangtech.tis.rpc.grpc.log.common";
option java_outer_classname = "LogCollectorProto";
option objc_class_prefix = "HLWS";


message NodeBackflowStatus{

    string nodeName=1;
    uint64 allSize=2;
    uint64 readed=3;
    uint32 taskid = 4;
    bool faild = 5;
    bool complete = 6;
    bool waiting = 7;
}


message JoinTaskStatus {
    string joinTaskName = 1;
    map<uint32, JobLog> jobStatus = 2;
    uint32 taskid = 3;
    bool faild = 5;
    bool complete = 6;
    bool waiting = 7;
}

message JobLog {
    bool waiting = 1;
    uint32 mapper = 2;
    uint32 reducer = 3;

}


message BuildSharedPhaseStatus {

    uint64 allBuildSize = 1;

    uint64 buildReaded = 2;

    uint32 taskid = 3;
    // 分组名称
    string sharedName = 4;


    bool faild = 5;
    bool complete = 6;
    bool waiting = 7;

}


message TableDumpStatus {

    string tableName = 1;

    uint32 taskid = 2;
    // 全部的记录数
    uint32 allRows = 3;
    // 已经读取的记录数
    uint32 readRows = 4;

    bool faild = 5;
    bool complete = 6;
    bool waiting = 7;
}

message Empty {

}
