syntax = "proto3";

import "common-msg.proto";

option java_multiple_files = true;
option java_package = "com.qlangtech.tis.grpc";
option java_outer_classname = "IncrStatusProto";
option objc_class_prefix = "HLWS";

package rpc;
// IncrStatusUmbilicalProtocol
service IncrStatus {
    rpc Ping (Empty) returns (PingResult) {
    }

    rpc ReportStatus (UpdateCounterMap) returns (MasterJob) {
    }

    rpc NodeLaunchReport (LaunchReportInfo) returns (Empty) {
    }

    rpc reportDumpTableStatus (TableDumpStatus) returns (Empty) {
    };

    rpc reportJoinStatus (   JoinTaskStatus) returns (Empty) {
    };

    rpc reportBuildIndexStatus (BuildSharedPhaseStatus) returns (Empty) {
    }


}



message LaunchReportInfo {

    map<string /*collection*/, TopicInfo> collectionFocusTopicInfo = 1;

}

message LaunchReportInfoEntry {
    string topicName = 1; /*topic*/
    repeated string tagName = 2; /*tags*/
}

message TopicInfo {
    repeated LaunchReportInfoEntry topicWithTags = 1;
}

message MasterJob {
    JobType jobType = 1;

    bool stop = 2;

    string indexName = 3;

    string uuid = 4;

    uint64 createTime = 5;

    enum JobType {
        // 说明是空对象
        None = 0;
        IndexJobRunning = 1;
    }
}

message UpdateCounterMap {
    map<string /*index name*/, TableSingleDataIndexStatus> data = 1;

    uint64 gcCounter = 2;

    // 从哪个地址发送过来的
    string from = 3;

    uint64 updateTime = 4;

}

message TableSingleDataIndexStatus {
    map<string, uint64> tableConsumeData = 1;

    uint32 bufferQueueRemainingCapacity = 2;

    uint32 bufferQueueUsedSize = 3;

    uint32 consumeErrorCount = 4;

    uint32 ignoreRowsCount = 5;

    string uuid = 6;

    uint64 tis30sAvgRT = 7;
    // 增量任务执行是否暂停
    bool incrProcessPaused = 8;
}




message PingResult {
    string value = 1;
}
